logo align fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,7 +89,7 @@ html {
   scale: 0.4;
   position: relative;
   top: -112px;
-  left: -100px;
+  left: -74px;
 }
 
 .me-img {
